<resources>
    <string name="app_name">Lab8</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="title_profile">Profile</string>
    <string name="title_leagues">Leagues</string>
    <string name="title_standings">Standings</string>
    <string name="title_activity_nav_drawer">NavActivityDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="title_league_home">League Home</string>
    <string name="title_team">Team</string>
    <string name="description_format">hello World</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_messageboard">Message Board</string>
    <string name="posting_failed">Failed to Post Message</string>
    <string name="posted_successfully">Message Posted!</string>
</resources>
