<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lab8.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_leagues"
        android:name="com.example.lab8.ui.leagues.LeaguesFragment"
        android:label="@string/title_leagues"
        tools:layout="@layout/fragment_leagues" />

    <fragment
        android:id="@+id/navigation_standings"
        android:name="com.example.lab8.ui.standings.StandingsFragment"
        android:label="@string/title_standings"
        tools:layout="@layout/fragment_standings" />

</navigation>